[project]
name = "impact-dashboard-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "github-cli>=1.0.0",
    "matplotlib>=3.10.8",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.59.0",
    "pygithub>=2.8.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.54.0",
]
